[workspace]
members = ["./cewt", "./composite"]
resolver = "2"

[workspace.dependencies]
thiserror = "1.0"
color-eyre = "0.6"
bpaf = { version = "0.9", features = ["derive"] }
scraper = "0.19"
html5ever = "0.26" # Scraper 0.19 uses html5ever 0.26
hyper = { version = "1", features = ["full"] }
http = "1"
lazy-regex = "3.1"
lazy_static = "1"
tokio = { version = "1", features = ["rt", "sync", "net", "fs"] }
log = "0.4"
env_logger = "0.11"
convert_case = "0.6"
borsh = {version = "1", features = ["derive", "unstable__schema"]}
ego-tree = "0.6.2"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
schemars = "0.8"
static_assertions = "1.1"
indoc = "2"
bitflags = "2.5"
