[workspace]
members = ["./cewt"]
resolver = "2"

[workspace.dependencies]
thiserror = "1.0"
color-eyre = "0.6.3"
bpaf = { version = "0.9", features = ["derive"] }
scraper = { version = "0.20", features = ["deterministic"]}
html5ever = "0.27" # Note: Do not update unless scraper updates
hyper = { version = "1.0.0-rc.4", features = ["full"] }
lazy-regex = "3.2"
lazy_static = "1"
tokio = { version = "1", features = ["rt", "sync", "net", "fs"] }
log = "0.4"
env_logger = "0.11.5"
convert_case = "0.6"
borsh = "1.5.1"
ego-tree = "0.6.2"
serde_json = "1.0"
