[package]
name = "composite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = {workspace = true}
color-eyre = {workspace = true}
hyper = {workspace = true}
http = {workspace = true}
tokio = {workspace = true}
log = { workspace = true}
lazy-regex = {workspace = true}
borsh = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
static_assertions = {workspace = true}
schemars = {workspace = true}
indoc = {workspace = true}
lazy_static = {workspace = true}
bitflags = {workspace = true}
